hphp/hack/test/typecheck/coeffects/higher_order_ctx_function.php.exp
File "higher_order_ctx_function.php", line 12, characters 3-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "higher_order_ctx_function.php", line 10, characters 23-24:
  From this declaration, the context of this function body provides the capability set {}
  File "higher_order_ctx_function.php", line 5, characters 3-8:
  But the function being called requires the default capability set {AccessGlobals, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
